...
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recently_added_text"
                style="@style/SemiOpaqueMedium15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/recently_added_text" />

            <TextView
                android:id="@+id/recently_added_view_all_text"
                style="@style/OpaqueMedium12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/recently_added_books_arrow"
                android:text="@string/view_all_text" />

            <ImageView
                android:id="@+id/recently_added_books_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
...

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_recently_added_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

            <ProgressBar
                android:id="@+id/recycler_view1_progress_bar"
...
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/most_read_text"
                style="@style/SemiOpaqueMedium15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/most_read_text" />

            <TextView

                android:id="@+id/most_read_view_all_text"
                style="@style/OpaqueMedium12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@+id/most_read_books_arrow"
                android:text="@string/view_all_text" />

            <ImageView
                android:id="@+id/most_read_books_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_most_read_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <ProgressBar
                android:id="@+id/recycler_view2_progress_bar"
...
