<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#2A2D35"
                android:elevation="4dp"
                android:theme="@style/Theme.AppCompat.NoActionBar">


            </android.support.v7.widget.Toolbar>


            <!-- Your long scrolling content here -->
            <LinearLayout
                android:id="@+id/main_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:orientation="vertical">
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/bottom_bar"
                android:background="#EAEAEA">


            </View>

            <LinearLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="5">

                <RelativeLayout
                    android:id="@+id/home_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_home" />

                    <ImageView
                        android:id="@+id/home_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/icon_home_select" />/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/todo_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/todo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_todo" />

                    <ImageView
                        android:id="@+id/todo_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_todo_select"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/add_book_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/add_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_add" />

                    <ImageView
                        android:id="@+id/add_book_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_add_select"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/notification_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_notification" />

                    <ImageView
                        android:id="@+id/notification_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_notification_select"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/notification_count_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_alignTop="@+id/notification_selected"
                        android:layout_toRightOf="@+id/notification_selected"
                        android:visibility="invisible" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/profile_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="bottomBarItemClick">

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_profile" />

                    <ImageView
                        android:id="@+id/profile_selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_profile_select"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
        <!-- The navigation drawer -->
        <android.support.design.widget.NavigationView
            android:id="@+id/left_drawer_nav"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/navigation_drawer_header_include"
                    layout="@layout/nav_header" />

                <ListView
                    android:id="@+id/left_drawer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/navigation_drawer_header_include"

                    android:divider="#EAEEEE"
                    android:dividerHeight="1dp" />

            </RelativeLayout>

        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</layout>